# rust_udp_server_for_godot

./: Cargo.toml
godot_client/: multiplayer_client.gd  multiplayer_client.tscn  project.godot
rust_server/src/: main.rs
udp_client_test/: icon.svg.import  multiplayer_client.gd.uid
